# elephant-agent

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  install.sh  netlify.toml  pyproject.toml
.claude/: settings.json
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 001_feature_request.yaml  002_bug_report.yaml
.github/workflows/: agent-lint.yml  ci.yml  deploy-preview.yml  design-closure-certification.yml  pypi-publish.yml  release-certification.yml
apps/: AGENTS.md  README.md  cron_scheduler_command.py  daemon.py  daemon_command.py  daemon_http.py  daemon_tasks.py  dashboard_command.py  dashboard_static_server.py  episode_runtime.py  launcher.py  learning_worker_command.py  learning_worker_runtime.py  provider_runtime.py  provider_runtime_support.py  runtime_layout.py  supervisor_command.py  upgrade_command.py
apps/api/: AGENTS.md  __init__.py  __main__.py  api_runtime_console.py  api_runtime_console_ops.py  api_runtime_console_usage.py  api_runtime_cron_ops.py  api_runtime_http_dispatch_helpers.py  api_runtime_http_methods.py  api_runtime_impl.py  api_runtime_internal_methods.py  api_runtime_internal_sections.py  api_runtime_internal_triggers.py  api_runtime_memory_methods.py  api_runtime_provider_methods.py  api_runtime_recall_methods.py  api_runtime_support.py  api_runtime_surface_methods.py  capabilities.py  runtime.py  state_runtime.py
apps/cli/: AGENTS.md  __init__.py  __main__.py  cli_main_elephant_support.py  cli_main_impl.py  cli_main_setup.py  cli_main_support.py  provider_flow.py  runtime.py  runtime_cognition.py  runtime_cron_sub_agents.py  runtime_extensions.py  runtime_extensions_skill_sources.py  runtime_extensions_surface.py  runtime_growth_metrics.py  runtime_growth_surface.py  runtime_impl.py  runtime_profile.py  runtime_prompt_messages.py  runtime_provider.py  (+37 more)
deploy/: AGENTS.md  README.md
docs/: README.md
scripts/: install.sh
tests/: AGENTS.md  README.md
(+420 files in other folders)
