[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elephant-agent"
version = "1.0.0.dev0"
description = "Elephant Agent CLI-first persistent agent runtime."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Agentic Intelligence Lab"}]
keywords = ["elephant-agent", "personal-ai", "agent", "cli", "persistent-ai", "memory", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities",
]
dependencies = [
  "aiohttp>=3.9,<4",
  "cryptography>=42,<45",
  "dingtalk-stream>=0.24.0",
  "discord.py>=2.6,<3",
  "opentelemetry-api>=1.41,<2",
  "opentelemetry-sdk>=1.41,<2",
  "opentelemetry-semantic-conventions>=0.52b0,<1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.41,<2",
  "prompt_toolkit>=3.0,<4",
  "qrcode>=7,<9",
  "rich>=13,<15",
  "typer>=0.16,<1",
  "lark-oapi>=1.5.3,<2",
  "playwright>=1.51,<2",
  "sqlite-vec==0.1.9",
  "tiktoken>=0.7,<1",
]

[project.scripts]
elephant = "apps.launcher:main"

[project.urls]
Homepage = "https://elephant.agentic-in.ai"
Documentation = "https://elephant.agentic-in.ai/docs/"
Repository = "https://github.com/agentic-in/elephant-agent"
Issues = "https://github.com/agentic-in/elephant-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps", "apps.api*", "apps.cli*", "apps.dashboard*", "apps.gateway*", "packages*"]
exclude = ["tests*", ".worktrees*", "apps.site*"]
namespaces = true

[tool.setuptools.package-data]
"apps.dashboard" = ["dist/*", "dist/assets/*"]
"packages.skills" = ["builtin_packages/*/*/SKILL.md"]
"packages.storage" = ["schema.sql"]
